# nm-file-secret-agent

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  renovate.json  sample_config.toml
.woodpecker/: test.yml
nix/: module.nix
src/: agent_manager.rs  config.rs  dbus.rs  dbus_bus_manager.rs  dbus_server.rs  main.rs  mapping.rs
