[package]
name = "nm-file-secret-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
