[package]
name = "nm-file-secret-agent"
description = "NetworkManager secret agent that responds with the content of preconfigured files"
version = "1.0.1"
edition = "2021"
authors = [ "Lilly Sell <li@lly.sh>" ]
homepage = "https://codeberg.org/lilly/nm-file-secret-agent"
repository = "https://codeberg.org/lilly/nm-file-secret-agent"
license = "MIT"
keywords = [ "networkmanager", "network-manager", "secret" ]
categories = [ "authentication", "command-line-utilities", "config" ]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"

[profile.release]
strip = true
lto = true
